# dawrs

./: .drone.yml  .gitignore  .woodpecker.yml  cog.toml  readme.md  renovate.json
crates/core/: Cargo.toml
crates/core/examples/: drumkit.rs  marry_had_a_little_lamb.rs
crates/core/src/: cpal.rs  lib.rs  patch.rs  poly_sample.rs
crates/core/src/effect/: delay.rs  lag.rs  mod.rs  oscilloscope.rs
crates/core/src/generator/: adsr.rs  mod.rs  sine.rs  triangle.rs
crates/core/src/sample_timing/: impl_ops.rs  mod.rs
crates/core/src/synthesizer/: basic_synthesizer.rs
